--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,7 @@
 name = "blockchain_network_simulation"
 version = "0.1.0"
 authors = ["pierre-l <pierre.larger@gmail.com>"]
+repository = "https://github.com/pierre-l/blockchain_network_simulation"
 
 [dependencies]
 env_logger = "0.5.10"
