--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,15 @@ rand = "0.3"
 ring = "0.12.1"
 tokio-timer = "0.2.3"
 clap = "2.31.2"
+
+[profile.dev]
+opt-level = 3
+
+[profile.release]
+opt-level = 3
+
+[profile.test]
+opt-level = 3
+
+[profile.bench]
+opt-level = 3
