--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,18 +1,5 @@
-[package]
-name = "blockchain_network_simulation"
-version = "0.1.0"
-authors = ["pierre-l <pierre.larger@gmail.com>"]
-repository = "https://github.com/pierre-l/blockchain_network_simulation"
-
-[dependencies]
-env_logger = "0.5.10"
-log = "0.4.1"
-futures = "0.1.19"
-tokio = "0.1.6"
-rand = "0.3"
-ring = "0.12.1"
-tokio-timer = "0.2.3"
-clap = "2.31.2"
+[workspace]
+members = ["network_simulator", "pow",]
 
 [profile.dev]
 opt-level = 3
