--- a/pow/Cargo.toml
+++ b/pow/Cargo.toml
@@ -5,7 +5,10 @@ authors = ["pierre-l <pierre.larger@gmail.com>"]
 repository = "https://github.com/pierre-l/blockchain_network_simulation"
 
 [dependencies]
-log = "0.4.1"
 env_logger = "0.5.10"
-network_simulator = { path = "../network_simulator" }
 clap = "2.31.2"
+futures = "0.1.19"
+log = "0.4.1"
+network_simulator = { path = "../network_simulator" }
+ring = "0.12.1"
+tokio-timer = "0.2.3"
