--- a/btclike/Cargo.toml
+++ b/btclike/Cargo.toml
@@ -8,3 +8,6 @@ env_logger = "0.5.10"
 log = "0.4.1"
 ring = "0.12.1"
 untrusted = "0.5.1"
+serde = "1.0.70"
+serde_derive = "1.0.70"
+serde_json = "1.0.24"
